Fixed the filter method in the reducer to allow seperate collapsing of duplicate notes nested inside a collection and on the note selection screens

--- a/src/Shared components/Note/Note.module.css
+++ b/src/Shared components/Note/Note.module.css
@@ -9,32 +9,9 @@
     position: relative;
     background-color: whitesmoke;
     margin-top: 20px;
-    animation: fadein 0.2s forwards;
-    -webkit-animation: fadein 0.2s forwards;
-    animation-delay: 0.3s;
-    -webkit-animation-delay: 0.3s;
-    opacity: 0;
-    -webkit-opacity: 0;
     padding-bottom: 15px;
 }
 
-@keyframes fadein {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
-}
-
-@-webkit-keyframes fadein {
-    0% {
-        -webkit-opacity: 0;
-    }
-    100% {
-        -webkit-opacity: 1;
-    }
-}
 
 .selected_clickable_area {
     width: 82%;
